<resources>
    <string name="app_name">Play Volley</string>
    <string name="text_lesson_description">This lesson gives us basic understanding of how Volley works in Android.</string>
    <string name="text_string_request">String Request</string>
    <string name="text_json_object_request">JSON Object Request</string>
    <string name="text_json_array_request">JSON Array Request</string>
    <string name="text_image_request">Image Request</string>
    <string name="text_loading">Loading...</string>
</resources>
